k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: desafio-devops
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
